[package]
name = "rdf-notes"
version = "0.1.0"
edition = "2021"
authors = ["Raymond Skinner <reqpro@requaos.com>"]
description = "Rust wasm experiment using graph store {in-memory|disk|remote} supporting RDF and sparql"
license = "MIT/Apache-2.0"
repository = "https://github.com/requaos/rdf-notes"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
lto = true
opt-level = 's'
